# nextcloud_appinfo

./: Cargo.toml  README.md
src/: error.rs  lib.rs
