[package]
name = "nextcloud_appinfo"
version = "0.5.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
description = "Library to read app info of an Nextcloud app"
readme = "README.md"
repository = "https://github.com/ChristophWurst/nextcloud_appinfo"
keywords = ["nextcloud"]
license = "GPL-3.0"
exclude = [
    ".vscode",
]
edition = "2018"

[dependencies]
failure = "0.1"
semver = "0.9"
xpath_reader = "0.5"
